src/objects/XC_Line_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Footer_Image_URL__c</fullName>
        <label>Footer Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Footer_Text__c</fullName>
        <label>Footer Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Image_URL__c</fullName>
        <label>Header Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Header_Text__c</fullName>
        <label>Header Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Line_Sheet_Text__c</fullName>
        <label>Line Sheet Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>XC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Sheets</relationshipLabel>
        <relationshipName>Line_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XC_Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Template One</fullName>
                </value>
                <value>
                    <fullName>Template Two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Line Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>XC_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Line_Sheets</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Line Sheets</label>
        <sharedTo>
            <role>Admin</role>
            <role>Director_Sales</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LSN-{0000}</displayFormat>
        <label>Line Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>